added example with dict and list merge